[package]
name = "tubor_yield"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tubor_yield"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build","anchor-spl/idl-build"]

[dependencies]
anchor-lang = {version = "0.31.1", features = ["init-if-needed", "event-cpi"]}
anchor-spl = { version = "0.31.1", features = ["mpl-token-metadata"] }
mpl-token-metadata = "5.1.0"
uint = { version = "0.10.0", default-features = false }
bytemuck = "1.23.1"
num-traits = "0.2.15"
spl-token-2022="9.0.0"
